# DFC_Benchmarking

./: .gitignore  README.md  analyze_and_plot_dfc.py  analyze_mini.py  gptoss_compare.py  make_defense_comparison.py  make_team_graphs.py  mini_eval.sh  probe_attacks.sh  pyproject.toml  run_shopping_fb.py  run_workspace_bedrock.sh  run_workspace_full.sh  run_workspace_gptoss.sh  run_workspace_gptoss_defense.sh  setup_dfc_env.sh  smoke3_bedrock.sh  smoke5_official.sh  smoke_bedrock.sh
dfc_agent_framework_integration/: README.md  pyproject.toml
dfc_agent_framework_integration/src/dfc_agent_framework_integration/: __init__.py  context.py  dfc_event_log.py  events.py  extraction.py  llm.py  materialize.py  persistence.py  policies.py  prompts.py  repair.py  runtime.py  schema.py  semantic_judge.py  source_required.py  sql_tool.py  tool_output_probe.py  tools.py  validation.py
dfc_agent_framework_integration/tests/: conftest.py  test_dfc_event_log.py  test_dfc_event_log_integration.py  test_example9_policy.py  test_extraction.py  test_materialize.py  test_persistence.py  test_policy_generation.py  test_policy_repair.py  test_prompts.py  test_run_database.py  test_runtime_judge_relocation.py  test_runtime_validation.py  test_source_required.py  test_source_required_gateway.py  test_tool_output_probe.py
docs/: doomarena_utility_plots.py  tau3_dfc_bedrock_runbook.md  tsr_vs_policy_adherence_plot.py
notebooks/: _build_admission_sweep.py  _build_defence_suite.py  _build_dfc_eval.py  _build_qwen_full.py  _build_qwen_smoke.py  _build_qwen_suite.py  _eval_dfc_vs_nodef.py  (+11 more)
(+1316 files in other folders)
