[project]
name = "dfc-agent-framework-integration"
version = "0.1.0"
description = "Reusable data-flow-control integration for agent benchmark frameworks"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "data-flow-control>=0.1.2",
    "openai>=1.59.7",
    "pydantic>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfc_agent_framework_integration"]
